--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/arb-T.json
@@ -619,6 +619,18 @@
     {
       "loc": "NKS_CONTACTS_TUI_NOTEINFO_NOTEPROMPT",
       "text": "أدخل ملاحظة جهة اتصال جديدة"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_TITLE",
+      "text": "إدارة جهات الاتصال"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_DESC",
+      "text": "إدارة جهات اتصالك بشكل تفاعلي"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_BODY",
+      "text": "تتيح لك واجهة المستخدم التفاعلية هذه إدارة جهات اتصالك بطريقة تفاعلية، حيث توفر لك لوحةً لاختيار جهات الاتصال ولوحةً لعرض معلوماتها. كما يمكنك تعديل جهات الاتصال وإضافتها واستيرادها وحذفها لمزيد من الراحة."
     }
   ]
 }
