--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/grk.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/grk.json
@@ -594,6 +594,18 @@
     {
       "loc": "NKS_CONTACTS_TUI_NOTEINFO_NOTEPROMPT",
       "text": "Εισαγάγετε μια νέα σημείωση επαφής"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_TITLE",
+      "text": "Διαχείριση επαφών"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_DESC",
+      "text": "Διαδραστική διαχείριση των επαφών σας"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_BODY",
+      "text": "Αυτό το διαδραστικό TUI σάς επιτρέπει να διαχειρίζεστε τις επαφές σας με διαδραστικό τρόπο, επειδή σας παρέχει ένα παράθυρο για την επιλογή επαφών και ένα παράθυρο για την προβολή πληροφοριών σχετικά με μια επαφή. Μπορείτε επίσης να επεξεργαστείτε, να προσθέσετε, να εισαγάγετε και να διαγράψετε επαφές εδώ για μεγαλύτερη ευκολία."
     }
   ]
 }
