--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ind-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ind-T.json
@@ -593,6 +593,18 @@
     {
       "loc": "NKS_CONTACTS_TUI_NOTEINFO_NOTEPROMPT",
       "text": "नया कॉन्टैक्ट नोट डालें"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_TITLE",
+      "text": "कॉन्टैक्ट्स मैनेज करना"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_DESC",
+      "text": "अपने कॉन्टैक्ट्स को इंटरैक्टिव तरीके से मैनेज करना"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_BODY",
+      "text": "यह इंटरैक्टिव TUI आपको अपने कॉन्टैक्ट्स को इंटरैक्टिव तरीके से मैनेज करने देता है, क्योंकि यह आपको कॉन्टैक्ट्स चुनने के लिए एक पेन और कॉन्टैक्ट के बारे में जानकारी देखने के लिए एक पेन देता है। आप ज़्यादा आसानी के लिए यहां कॉन्टैक्ट्स को एडिट, ऐड, इंपोर्ट और डिलीट भी कर सकते हैं।"
     }
   ]
 }
