--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ndo.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ndo.json
@@ -593,6 +593,18 @@
     {
       "loc": "NKS_CONTACTS_TUI_NOTEINFO_NOTEPROMPT",
       "text": "Masukkan catatan kontak baru"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_TITLE",
+      "text": "Mengelola kontak"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_DESC",
+      "text": "Mengelola kontak Anda secara interaktif"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_BODY",
+      "text": "TUI interaktif ini memungkinkan Anda mengelola kontak secara interaktif, karena menyediakan panel untuk memilih kontak dan panel untuk melihat informasi tentang kontak. Anda juga dapat mengedit, menambah, mengimpor, dan menghapus kontak di sini untuk kenyamanan lebih."
     }
   ]
 }
