--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/ukr.json
@@ -593,6 +593,18 @@
     {
       "loc": "NKS_CONTACTS_TUI_NOTEINFO_NOTEPROMPT",
       "text": "Введіть нову примітку контакту"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_TITLE",
+      "text": "Керування контактами"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_DESC",
+      "text": "Інтерактивне керування контактами"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_BODY",
+      "text": "Цей інтерактивний інтерфейс користувача дозволяє керувати контактами інтерактивним способом, оскільки він надає панель для вибору контактів та панель для перегляду інформації про контакт. Ви також можете редагувати, додавати, імпортувати та видаляти контакти тут для більшої зручності."
     }
   ]
 }
