--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/Output/Localizations.fr.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/Output/Localizations.fr.resx
@@ -558,5 +558,14 @@
   <data name="NKS_CONTACTS_TUI_NOTEINFO_NOTEPROMPT" xml:space="preserve">
     <value>Saisir une nouvelle note du contact</value>
   </data>
+  <data name="NKS_CONTACTS_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Gestion des contacts</value>
+  </data>
+  <data name="NKS_CONTACTS_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Gestion interactive de vos contacts</value>
+  </data>
+  <data name="NKS_CONTACTS_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Cette interface utilisateur interactive vous permet de gérer vos contacts de manière intuitive. Elle propose un volet de sélection et un volet d&apos;affichage des informations relatives à chaque contact. Vous pouvez également modifier, ajouter, importer et supprimer des contacts pour plus de simplicité.</value>
+  </data>
 
 </root>
