--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/Output/Localizations.hi.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/Output/Localizations.hi.resx
@@ -558,5 +558,14 @@
   <data name="NKS_CONTACTS_TUI_NOTEINFO_NOTEPROMPT" xml:space="preserve">
     <value>नया कॉन्टैक्ट नोट डालें</value>
   </data>
+  <data name="NKS_CONTACTS_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>कॉन्टैक्ट्स मैनेज करना</value>
+  </data>
+  <data name="NKS_CONTACTS_TUI_HELP01_DESC" xml:space="preserve">
+    <value>अपने कॉन्टैक्ट्स को इंटरैक्टिव तरीके से मैनेज करना</value>
+  </data>
+  <data name="NKS_CONTACTS_TUI_HELP01_BODY" xml:space="preserve">
+    <value>यह इंटरैक्टिव TUI आपको अपने कॉन्टैक्ट्स को इंटरैक्टिव तरीके से मैनेज करने देता है, क्योंकि यह आपको कॉन्टैक्ट्स चुनने के लिए एक पेन और कॉन्टैक्ट के बारे में जानकारी देखने के लिए एक पेन देता है। आप ज़्यादा आसानी के लिए यहां कॉन्टैक्ट्स को एडिट, ऐड, इंपोर्ट और डिलीट भी कर सकते हैं।</value>
+  </data>
 
 </root>
