--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/Output/Localizations.id.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/Output/Localizations.id.resx
@@ -558,5 +558,14 @@
   <data name="NKS_CONTACTS_TUI_NOTEINFO_NOTEPROMPT" xml:space="preserve">
     <value>Masukkan catatan kontak baru</value>
   </data>
+  <data name="NKS_CONTACTS_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Mengelola kontak</value>
+  </data>
+  <data name="NKS_CONTACTS_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Mengelola kontak Anda secara interaktif</value>
+  </data>
+  <data name="NKS_CONTACTS_TUI_HELP01_BODY" xml:space="preserve">
+    <value>TUI interaktif ini memungkinkan Anda mengelola kontak secara interaktif, karena menyediakan panel untuk memilih kontak dan panel untuk melihat informasi tentang kontak. Anda juga dapat mengedit, menambah, mengimpor, dan menghapus kontak di sini untuk kenyamanan lebih.</value>
+  </data>
 
 </root>
