--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/cnt-T.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/cnt-T.json
@@ -596,6 +596,18 @@
     {
       "loc": "NKS_CONTACTS_TUI_NOTEINFO_NOTEPROMPT",
       "text": "輸入新的聯絡人備註"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_TITLE",
+      "text": "聯絡人管理"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_DESC",
+      "text": "互動式管理聯絡人"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_BODY",
+      "text": "此互動式使用者介面 (TUI) 可讓您以互動方式管理聯絡人，因為它提供了一個用於選擇聯絡人的面板和一個用於查看聯絡人資訊的面板。您也可以在此編輯、新增、匯入和刪除聯絡人，從而更加方便。"
     }
   ]
 }
