--- a/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/jpn.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Contacts/Resources/Languages/jpn.json
@@ -593,6 +593,18 @@
     {
       "loc": "NKS_CONTACTS_TUI_NOTEINFO_NOTEPROMPT",
       "text": "新しい連絡先メモを入力"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_TITLE",
+      "text": "連絡先の管理"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_DESC",
+      "text": "連絡先をインタラクティブに管理"
+    },
+    {
+      "loc": "NKS_CONTACTS_TUI_HELP01_BODY",
+      "text": "このインタラクティブなTUIでは、連絡先を選択するためのパネルと連絡先の情報を表示するパネルが用意されているため、インタラクティブに連絡先を管理できます。また、連絡先の編集、追加、インポート、削除もここで行えるため、利便性が向上します。"
     }
   ]
 }
